Transition: moved @property to be the second parameter

--- a/mixins.less
+++ b/mixins.less
@@ -23,7 +23,7 @@
     -webkit-background-clip: @attr;
 }
 
-.transition(@speed: 300, @easing: linear, @property: all) {
+.transition(@speed: 300, @property: all, @easing: linear) {
     transition: @property @speed @easing;
     -moz-transition: @property @speed @easing;
     -webkit-transition: @property @speed @easing;
