.shadow > .box-shadow

--- a/mixins.less
+++ b/mixins.less
@@ -13,7 +13,7 @@
     background-image: -ms-linear-gradient(top, @from, @to);
     background-image: linear-gradient(@from, @to);
 }
-.shadow(@attr: 1px 1px 0 rgba(0,0,0,.1)) {
+.box-shadow(@attr: 1px 1px 0 rgba(0,0,0,.1)) {
     -moz-box-shadow: @attr;
     -webkit-box-shadow: @attr;
     box-shadow: @attr;
